The waiting box show up when pushing place order

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -146,43 +146,10 @@
     <section id="upcoming-order"></section>
 
     <!-- waiting-->
-    <section class="waiting">
-      <div class="conainer-lg">
-        <div class="row waiting-row">
-          <div class="col">
-            <img src="/images/step-bar5.png" alt="step-bar">
-          </div>
-          <div class="w-100"></div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-1 my-auto"></div>
-
-          <div class="col-lg-2 my-auto">Choose your foods</div>
-          <div class="col-lg-1 my-auto"></div>
-
-          <div class="col-lg-2 my-auto">Order complete</div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 my-auto">Ready for pickup</div>
-
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-1 my-auto"></div>
-        </div>
-      </div>
-      <br>
-      <br>
-      <br>
+    <section id="waiting">
 
 
-      <div class="conainer-lg">
-        <div class="row waiting-row">
-          <div class="col-lg-3 my-auto"></div>
-          <div class="col-lg-6 my-auto">
-            <img src="/images/Catering3.png" alt="step-bar">
-            <div id="waitingOrderNumber"></div>
 
-          </div>
-          <div class="col-lg-3 my-auto"></div>
-        </div>
-      </div>
 
     </section>
   </main>
