1. rendering restauran view when click login admin

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,9 @@
   <header>
     <nav>
 
-      <div>
+      <div class="login-admin">
         <a href="/login/1">Login: Client #1</a>
+        <button type="button" class="btn btn-warning" id="render-restaurant-views">Login Admin</button>
       </div>
 
       <div class="restaurant-name">
@@ -42,10 +43,6 @@
   <main>
 
 
-    <!-- Temporary button for restaurnant views--> <!-- TOFIX-->
-    <button type="button" class="btn btn-danger" id="render-restaurant-views">Render Restaurnant Views</button>
-    <button type="button" class="btn btn-info" id="hide-restaurant-views">Toggle Restaurnant Views</button>
-    <button type="button" class="btn btn-warning" id="upcoming-order-button">Up coming order</button>
 
     <!-- menu category container -->
 
