--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -13,7 +13,6 @@ body {
     display: flex;
     justify-content:space-between;
     align-items: center;
-
     padding: 20px 50px;
 
     .cart {
@@ -22,6 +21,10 @@ body {
     }
   }
 
+  .login-admin {
+    flex-direction: column;
+    display: flex;
+  }
   .restaurant-name {
     margin-top:20px;
     display: flex;
