--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -195,6 +195,11 @@ body {
 
   /* up-comming order */
 
+  .upcoming-header {
+    font-family: 'Bungee', cursive;
+    padding-left: 3rem;
+  }
+
   .upcomming-order {
     margin: 50px 100px;
     background-color: #EEE;
