--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,19 +51,19 @@
         <div class="row">
 
           <div class="col-lg-3 sandwich" id="sandwich">
-            <img src="/images/sandwich7.png" alt="sandwich">
+            <img src="/images/sandwich7.png" alt="sandwich" class="menu1">
             <p>sandwich</p>
           </div>
           <div class="col-lg-3" id="soup">
-            <img src="/images/soup2.png" alt="soup">
+            <img src="/images/soup2.png" alt="soup" class="menu2">
             <p>soup</p>
           </div>
           <div class="col-lg-3" id="salad">
-            <img src="/images/salad2.png" alt="salad">
+            <img src="/images/salad2.png" alt="salad" class="menu3">
             <p>salad</p>
           </div>
           <div class="col-lg-3" id="drinks">
-            <img src="/images/drink2.png" alt="drink">
+            <img src="/images/drink2.png" alt="drink" class="menu4">
             <p>drink</p>
           </div>
 
