--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -221,6 +221,11 @@ body {
     font-family: 'Bungee', cursive;
   }
 
+  #readyForPickupRow {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
   .takeOrderNumber {
     font-family: 'Bungee', cursive;
     font-size: 2rem;
