--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -244,7 +244,7 @@ body {
     margin: 50px;
     background-color: #EEE;
     border-radius: 10px;
-    border: 3px solid gray;
+    border: 6px solid dodgerblue;
     padding: 20px 20px;
     text-align: center;
     font-family: 'Bungee', cursive;
